--- a/applications/common/frontend/src/components/Tabs/Tabs.scss
+++ b/applications/common/frontend/src/components/Tabs/Tabs.scss
@@ -49,6 +49,7 @@
               width: 100%;
               border-bottom: none;
               border-right: var(--border-weight-2) solid;
+              border-color: transparent;
               &.is-active {
                 border-color: var(--color-primary--600) !important;
                 opacity: 1;
@@ -65,9 +66,11 @@
   .tabs {
     ul {
       gap: var(--spacing-6);
+      border-bottom: none;
       li {
         border-bottom: var(--border-weight-2) solid;
         opacity: 0.5;
+        border-color: transparent;
         &.is-active {
           border-color: var(--color-primary--600) !important;
           opacity: 1;
@@ -93,6 +96,7 @@
   &.is-vertical {
     display: flex;
     flex: 1;
+    flex-direction: column;
     .tabs {
       flex-shrink: 0;
       ul {
@@ -103,9 +107,7 @@
           @extend .pb-3;
           @extend .pt-3;
           @extend .pr-3;
-          width: 100%;
-          border-bottom: none;
-          border-right: var(--border-weight-2) solid;
+          border-color: transparent;
           &.is-active {
             border-color: var(--color-primary--600) !important;
           }
@@ -114,6 +116,19 @@
     }
     .tabs-content {
       width: 100%;
+    }
+    @include breakpoint.media-breakpoint-maximum {
+      flex-direction: row;
+      .tabs {
+        ul {
+          li {
+            border-bottom: none;
+            border-right: var(--border-weight-2) solid;
+            border-color: transparent;
+            width: 100%;
+          }
+        }
+      }
     }
   }
 }
