KYAN-150 responsive styles - fixes

--- a/applications/common/frontend/src/components/Tabs/Tabs.scss
+++ b/applications/common/frontend/src/components/Tabs/Tabs.scss
@@ -117,6 +117,7 @@
     }
     .tabs-content {
       width: 100%;
+      text-align: center;
     }
     @include breakpoint.media-breakpoint-maximum {
       flex-direction: row;
