Kyan 148 background for a section (#362)
* KYAN-148 bg for container

* KYAN-148 bg for container

* KYAN-148 bg for container

* KYAN-148 bg for section

* KYAN-148 fix indentation

* KYAN-148 style fo bg image

* [KYAN-148] Add background image with filtering out from visualised reasources

* KYAN-148 bg image

---------

Co-authored-by: Pawel Nowak <pawel.nowak@ds.pl>
Co-authored-by: Paweł Jóźwicki <109656376+paweljozwicki@users.noreply.github.com>

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/section/section.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/section/section.html
@@ -16,8 +16,8 @@
   ~
 */-->
 <sly data-sly-use.model="pl.ds.kyanite.common.components.models.SectionComponent">
-    <section class="section ${model.size}" id="${model.id}">
-        <sly data-sly-repeat.paragraph="${resource.children}"
+    <section class="section ${model.size} ${model.image.assetReference ? 'with-background-image' : ''}" id="${model.id}" style="background-image:url('${model.image.assetReference @ context='styleString'}');">
+        <sly data-sly-repeat.paragraph="${model.children}"
              data-sly-resource="${paragraph.path @ resourceType=paragraph.resourceType}"></sly>
     </section>
 </sly>
