WSIO-444 Fix transparent background

--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
@@ -51,7 +51,7 @@ $color-navbar-link: var(--color-grey--900);
     }
   }
 
-  &:not(.is-primary, .is-link, .is-info, .is-warning, .is-danger, .is-success, .is-white, .is-light, .is-dark, .is-black) {
+  &:not(.is-primary, .is-link, .is-info, .is-warning, .is-danger, .is-success, .is-white, .is-light, .is-dark, .is-black, .is-transparent) {
     background-color: var(--base-color-body-background);
 
     a.navbar-item:not(.navbar-dropdown a.navbar-item) {
