--- a/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
@@ -20,6 +20,8 @@ $map_t-base-color: (
   body-background: #1C1C1C,
   body-text: #FFF,
   secondary-background: #232323,
+  hover-navbar-link: #9E73FF,
+  footer-background: #181818,
   secondary-text: #AAA,
   contrast-background: #555,
   contrast-text: #CCC
