KYAN-154 change global colors

--- a/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
@@ -17,12 +17,12 @@
  */
 
 $map_t-base-color: (
-  body-background: #1C1C1C,
-  body-text: #FFF,
+  body-background: #0A0A0B,
+  body-text: #ECF5FF,
   secondary-background: #232323,
   hover-navbar-link: #9E73FF,
   footer-background: #181818,
-  secondary-text: #AAA,
+  secondary-text: #A3A4B4,
   contrast-background: #555,
   contrast-text: #CCC
 );
