KYAN-154 SVG images won't work in navbar

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/image/template.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/image/template.html
@@ -18,7 +18,7 @@
   <sly data-sly-set.shadowClass="${model.hasShadow ? 'has-shadow' : ''}"></sly>
 
   <sly data-sly-test.isSvg="${model.isSvg && !model.isAnyMediaAsset}">
-    <span class="image ${model.style} ${shadowClass}">${model.assetReference @ context='unsafe'}</span>
+    <span class="image ${model.style} ${shadowClass}">${model.svgDocument @ context='unsafe'}</span>
   </sly>
 
   <sly data-sly-test="${!isSvg}">
