[WSIO-478] Update styles for the footer component

--- a/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
@@ -22,7 +22,8 @@ $map_t-base-color: (
   secondary-background: #232323,
   secondary-text: #A3A4B4,
   contrast-background: #555,
-  contrast-text: #CCC
+  contrast-text: #CCC,
+  menu-label: #9E73FF
 );
 
 $map_t-color-ids: (
