KYAN-155 apply tab margin fix

--- a/applications/common/frontend/src/components/Tabs/Tabs.scss
+++ b/applications/common/frontend/src/components/Tabs/Tabs.scss
@@ -119,8 +119,10 @@
     .tabs-content {
       width: 100%;
       text-align: center;
+      margin-top: var(--spacing-6);
       @include breakpoint.media-breakpoint-xlarge {
-        margin-left: var(--spacing-4);
+        margin-left: var(--spacing-6);
+        margin-top: 0;
       }
     }
     @include breakpoint.media-breakpoint-xlarge {
