WSIO-504 dynamic title fix

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
@@ -24,7 +24,9 @@
   </sly>
   <h1 id="${model.anchorId}" style="text-align: ${model.titleAlign @ context='styleToken'};" data-sly-element="${model.element}" class="${model.titleClasses @ join=' '}">
     ${model.textAsOneLine @ context='html'}
+    
     <sly data-sly-test="${model.addAnimatedEndings}">
+      <!--/* list for SEO purposes */-->
       <span class="${model.endingsClasses @ join=' '} typed-strings-animation">
         <sly data-sly-list.item="${model.endings}">
           <span>
@@ -32,10 +34,22 @@
           </span>
         </sly>
       </span>
-      <sly data-sly-test="${!wcmmode.isEdit && model.endings}">
-        <span class="${model.endingsClasses @ join=' '} typed-animation" data-show-cursor="${model.showCursor}" data-speed="${model.speed}"></span>
+      <!--/* end */-->
+      <div class="title-container" data-sly-test="${!wcmmode.isEdit && model.endings}">
+          <!--/* list to get the heighest element */-->
+          <sly data-sly-test="${model.addAnimatedEndings}">
+          <div class="container-with-endings ${model.endingsClasses @ join=' '}">
+            <sly data-sly-list.item="${model.endings}">
+              <span>
+                ${item.value}
+              </span>
+            </sly>
+          </div>
+        </sly>
+        <!--/* end */-->
+        <span class="${model.endingsClasses @ join=' '} typed-animation" data-show-cursor="${model.showCursor}" data-endings="${model.endings.values}" data-speed="${model.speed}"></span>
         <sly data-sly-test="${!model.showCursor}"><span class="typed-cursor" style="visibility: hidden" aria-hidden="true">|</span></sly>
-      </sly>
+      </div>
     </sly>
   </h1>
   <sly data-sly-test="${model.addSubtitle}">
