WSIO-506 contact us - icon fix

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/contactform/contactform.html
@@ -57,7 +57,7 @@
           <div class="control has-icons-left">
             <input class="input email-input" type="email" name="email" placeholder="Email" required>
             <span class="icon is-small is-left">
-          <i class="fas fa-envelope"></i>
+            <i class="mdi mdi-email"></i>
         </span>
           </div>
           <p class="help is-danger is-hidden email-validate-error">This email is invalid</p>
