--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/title/title.html
@@ -27,16 +27,16 @@
     
     <sly data-sly-test="${model.addAnimatedEndings}">
       <!--/* list for SEO purposes */-->
-      <span class="${model.endingsClasses @ join=' '} typed-strings-animation">
+      <div class="typed-strings-animation ${model.endingsClasses @ join=' '}" data-sly-test="${wcmmode.isEdit}">
         <sly data-sly-list.item="${model.endings}">
           <span>
             ${item.value}
           </span>
         </sly>
-      </span>
+      </div>
       <!--/* end */-->
       <div class="title-container" data-sly-test="${!wcmmode.isEdit && model.endings}">
-          <!--/* list to get the heighest element */-->
+          <!--/* for SEO purposes and to get the heighest element */-->
           <sly data-sly-test="${model.addAnimatedEndings}">
           <div class="container-with-endings ${model.endingsClasses @ join=' '}">
             <sly data-sly-list.item="${model.endings}">
@@ -47,7 +47,7 @@
           </div>
         </sly>
         <!--/* end */-->
-        <span class="${model.endingsClasses @ join=' '} typed-animation" data-show-cursor="${model.showCursor}" data-endings="${model.endings.values}" data-speed="${model.speed}"></span>
+        <span class="${model.endingsClasses @ join=' '} typed-animation" data-show-cursor="${model.showCursor}" data-endings="${model.endingJson}" data-speed="${model.speed}"></span>
         <sly data-sly-test="${!model.showCursor}"><span class="typed-cursor" style="visibility: hidden" aria-hidden="true">|</span></sly>
       </div>
     </sly>
