WSIO-526 Add accessibility names for carousel buttons

--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/carousel/carousel.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/carousel/carousel.html
@@ -28,12 +28,12 @@
         data-items-per-row-lg="${model.desktopElementsInRow}"
       >
         <div data-glide-el="controls" class="buttons is-right">
-          <button data-glide-dir="<" class="button">
+          <button data-glide-dir="<" class="button" aria-label="Shift to the previous item">
             <span class="icon">
               <i class="mdi mdi-arrow-left"></i>
             </span>
           </button>
-          <button data-glide-dir=">" class="button">
+          <button data-glide-dir=">" class="button" aria-label="Shift to the next item">
             <span class="icon">
               <i class="mdi mdi-arrow-right"></i>
             </span>
