WSIO-532 Change background colors for the dark mode

--- a/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/dark-mode/atomic-design-system/00-token/t.color/t.color.scss
@@ -17,13 +17,14 @@
  */
 
 $map_t-base-color: (
-  body-background: #0A0A0B,
+  body-background: #1C1C1C,
   body-text: #ECF5FF,
   secondary-background: #232323,
   secondary-text: #A3A4B4,
   contrast-background: #555,
   contrast-text: #CCC,
-  menu-label: #9E73FF
+  menu-label: #9E73FF,
+  footer-background: #181818
 );
 
 $map_t-color-ids: (
