--- a/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbarmegadropdown/navbarmegadropdown.html
+++ b/applications/common/backend/src/main/resources/libs/kyanite/common/components/navbar/navbarmegadropdown/navbarmegadropdown.html
@@ -49,14 +49,21 @@
             <sly data-sly-test="${!column.hideColumn && column.type == 'highlights'}">
               <div class="column highlights-column ${column.colSizeClass}">
                 <sly data-sly-list.highlight="${column.highlights}">
-                  <a class="navbar-item" href="${highlight.url}" target="${highlight.isExternalUrl ? '_blank' : ''}">
-                    ${highlight.label}
-                    <sly data-sly-test="${item.isExternalUrl}">
-                      <span class="icon">
-                        <i class="mdi mdi-open-in-new"></i>
-                      </span>
-                    </sly>
-                  </a>
+                  <sly data-sly-test="${highlight.url}">
+                    <a class="navbar-item" href="${highlight.url}" target="${highlight.isExternalUrl ? '_blank' : ''}">
+                      ${highlight.label}
+                      <sly data-sly-test="${item.isExternalUrl}">
+                        <span class="icon">
+                          <i class="mdi mdi-open-in-new"></i>
+                        </span>
+                      </sly>
+                    </a>
+                  </sly>
+                  <sly data-sly-test="${!highlight.url}">
+                    <span class="highlight-label">
+                      ${highlight.label}
+                    </span>
+                  </sly>
                 </sly>
               </div>
             </sly>
